--- a/app/src/main/res/layout/dialog_select_input.xml
+++ b/app/src/main/res/layout/dialog_select_input.xml
@@ -24,11 +24,12 @@
                 android:id="@+id/btnCreateTTS"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:text="TTS"
                 app:layout_constraintEnd_toStartOf="@+id/btnCreateTBK"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
 
             <Button
                 android:id="@+id/btnCreateWiw"
@@ -44,11 +45,23 @@
                 android:id="@+id/btnCreateTBK"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="TBK"
                 app:layout_constraintEnd_toStartOf="@+id/btnCreateWiw"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/btnCreateTTS"
                 app:layout_constraintTop_toTopOf="@+id/btnCreateTTS" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Pilih Questioner Editor:"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
