--- a/app/src/main/res/drawable/box_image_shape.xml
+++ b/app/src/main/res/drawable/box_image_shape.xml
@@ -2,11 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="50dp" />
-    <size android:height="36dp"
-        android:width="36dp"/>
+    <size
+        android:width="48dp"
+        android:height="48dp" />
     <stroke
-        android:color="@color/white"
+        android:width="1dp"
+        android:color="@color/button"
         android:dashWidth="10px"
-        android:dashGap="0dp"
-        android:width="3dp"/>
+        android:dashGap="0dp" />
 </shape>
