--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -158,15 +158,14 @@
         app:layout_constraintStart_toEndOf="@+id/btnDatabase"
         app:layout_constraintTop_toTopOf="@+id/btnDatabase" />
 
-    <ImageView
-        android:id="@+id/imgInfoNetwork"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:padding="10dp"
-        android:background="@drawable/box_image_shape"
-        app:layout_constraintStart_toEndOf="@+id/btnScanQRCode"
-        app:layout_constraintTop_toTopOf="@+id/btnScanQRCode"
-        app:srcCompat="@drawable/square_xmark_solid" />
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintEnd_toStartOf="@+id/btnLogin"
+        app:layout_constraintStart_toEndOf="@+id/btnShop"
+        app:layout_constraintTop_toBottomOf="@+id/btnShop" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
